# ai-notes

./: .gitignore  Makefile  README.md  README_POETRY.md  README_USAGE.md  app.py  docker-compose.yml  run.bat  run.sh  run_all.bat  run_all.sh  setup.py  start.sh
backend/: README_TAGS.md  SUMMARY.md  __init__.py  app.py  audio_recorder.py  build.py  config.py  pyproject.toml  recorder.py  recorder_api.py  requirements.txt  search.py  tagging.py  test_recordings.py  test_tags.py  transcriber.py  update_tags.py  web_app.py
backend/api/: auth.py  notes.py  recorder.py  search.py
backend/core/: config.py  logger.py
backend/models/: __init__.py  note.py
backend/services/: notes.py  recorder.py  tagging.py  transcriber.py
backend/static/js/: recorder.js
backend/web/: app.py
docker/: Dockerfile  docker-service.sh
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx  config.ts  main.tsx
frontend/src/components/: Header.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: Home.tsx  Login.tsx  Notes.tsx  Recorder.tsx  Search.tsx
frontend/src/services/: api.ts
frontend/static/css/: styles.css
